--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -30,10 +31,24 @@ dependencies {
     // Picasso for remote image loading
     // Android Async Http for sending async network requests
     // ActiveAndroid for simple persistence with an ORM
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.android.support:support-v4:23.2.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    apt 'org.parceler:parceler:1.0.4'
+    //Parceler
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    //Recyclerview
+    compile 'com.android.support:recyclerview-v7:23.2.0'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'com.loopj.android:android-async-http:1.4.8'
+    //GSON
+    compile 'com.google.code.gson:gson:2.4'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.android.support:design:23.2.0'
+    //roundedimageview
+    compile 'com.makeramen:roundedimageview:2.2.1'
+    compile 'org.parceler:parceler-api:1.0.4'
+    //Glide
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    //https://github.com/yqritc/Android-ScalableVideoView
+    compile 'com.yqritc:android-scalablevideoview:1.0.3'
 }
