--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,17 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.codepath.apps.twitterdemo.application.RestApplication"
+        android:name=".application.TwitterApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
             android:name="AA_DB_NAME"
-            android:value="RestClient.db" />
+            android:value="Twitter.db" />
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
-
         <activity
             android:name="com.codepath.apps.twitterdemo.activities.LoginActivity"
             android:label="@string/app_name"
