--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,22 +33,24 @@ dependencies {
     // ActiveAndroid for simple persistence with an ORM
     apt 'org.parceler:parceler:1.0.4'
     //Parceler
-    compile 'com.android.support:appcompat-v7:23.2.0'
     //Recyclerview
+    //GSON
+    //roundedimageview
+    //Glide
+    //https://github.com/yqritc/Android-ScalableVideoView
+    //Install PagerSlidingTabStrip
+    compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:recyclerview-v7:23.2.0'
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'com.loopj.android:android-async-http:1.4.8'
-    //GSON
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.android.support:design:23.2.0'
-    //roundedimageview
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'org.parceler:parceler-api:1.0.4'
-    //Glide
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
-    //https://github.com/yqritc/Android-ScalableVideoView
     compile 'com.yqritc:android-scalablevideoview:1.0.3'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
